--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,27 @@
-.App {
-  text-align: center;
+#mainDiv img{
+  width: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
+#contact{
+  display: flex;
+  justify-content: center;
+}
+
+#wapp{
+  width: 20px;
+  height: 20px;
+}
+
+#fcbook{
+  width: 20px;
+  height: 20px;
+}
+
+/* @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
-/* 
-.App-header {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-} */
 
 @keyframes App-logo-spin {
   from {
@@ -25,4 +30,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
