--- a/src/nav.css
+++ b/src/nav.css
@@ -1,15 +1,10 @@
 #nav a:hover:not(.navbar-brand){
-    background-color: white;
+    background-color: #ffd93b;
     color: black;
 }
 
 #nav a{
     transition: background-color 800ms ease-in-out;
-    color: white;
+    color: black;
     border-radius: 10px;
-}
-
-#logo{
-    width: 30px;
-    height: 30px;
 }
